--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,4 +3,28 @@
 @import 'reset';
 @import 'global';
 
+.header {
+  padding: 40px 0;
+  &__wrap {
+    display: flex;
+    justify-content: space-between
+  }
+}
+
+.menu {
+  &__list {
+    display: flex;
+  }
+  &__item:not(:last-child) {
+    margin-right: 35px;
+  }
+  &__link {
+    text-transform: uppercase;
+    color: $title;
+  }
+  &__link--active {
+    color: $accent;
+  }
+}
+
 @import 'media';
