--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,7 +7,8 @@
   padding: 40px 0;
   &__wrap {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -19,12 +20,59 @@
     margin-right: 35px;
   }
   &__link {
-    text-transform: uppercase;
+    @extend %roboto-400;
     color: $title;
+    text-transform: uppercase;
+    padding-bottom:3px;
+    transition: color 0.3s;
+    &:hover {
+      color: $accent;
+      border-bottom: 1px solid $accent;
+    }
   }
   &__link--active {
+    @extend %roboto-700;
     color: $accent;
   }
 }
+
+.user-nav {
+  display: flex;
+  &__link {
+    position: relative;
+  }
+  &__link:not(:last-child) {
+    margin-right: 25px;
+  }
+  &__num {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    color: white;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @import 'media';
