--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -59,12 +59,98 @@
   }
 }
 
+.footer {
+  background-color: $bg;
+}
+
+.footer-top {
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  &__contact {
+    width: 250px;
+    margin-right: 50px;
+  }
+  &__nav {
+    width: 170px;
+    margin-right: 30px;
+  }
+  &__form {
+    max-width: 470px;
+  }
+  &__logo {
+    display: block;
+    margin-bottom: 34px;
+  }
+  &__links {
+    display: block;
+    margin-bottom: 10px;
+  }
+  &__social {
+    display: flex;
+    align-items: center;
+    padding-top: 30px;
+  }
+  &__social-link {
+    transition: all .3s;
+    path {
+      fill: $default;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+  &__social-item:not(:last-child) {
+    margin-right: 18px;
+  }
+  &__title {
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 1;
+    color: $title;
+    margin-bottom: 40px;
+  }
+  &__list-link {
+    display: block;
+    margin-bottom: 10px;
+  }
+  &__text {
+    margin-bottom: 25px;
+  }
+  &__input {
+    max-width: 320px;
+    width: 100%;
+    background-color: #fff;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+  }
+  &__btn {
+    color: #fff;
+    background-color: $accent;
+    text-transform: uppercase;
+    padding: 12px 26px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  }
+}
+
+.footer-bottom {
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  &__accept-img {
+    display: inline;
+    vertical-align: middle;
+    margin-left: 25px;
+  }
+}
 
 
 
-
-
-
+  
 
 
 
