--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   line-height: 26px;
   color: $default;
-  background-color: #ccc;
+  // background-color: #ccc;
   display: flex;
   flex-direction: column;
   height: 100%;
