--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -23,3 +23,11 @@ $bg: #f6f6f6;
   font-weight: 700;
 }
 
+%btn {
+  background-color: $accent;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 12px 26px;
+  @extend %roboto-400;
+  box-shadow: 0 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
